--- a/view/src/index.html
+++ b/view/src/index.html
@@ -6,6 +6,17 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <style>
+  body{
+    background-image: url('/images/wallpaper_enhanced.jpg');
+    background-size: cover;        /* Ensures the image covers the entire viewport */
+    background-position: center;   /* Centers the image */
+    background-repeat: no-repeat;  /* Prevents tiling */
+    background-attachment: fixed;  /* Makes the background stay fixed when scrolling */
+    height: 100vh;                 /* Ensures the body takes up the full height of the viewport */
+    margin: 0;                     /* Removes any default margins */
+  }
+  </style>
 </head>
 <body>
   <app-root></app-root>
