--- a/view/src/app/components/login/login.component.html
+++ b/view/src/app/components/login/login.component.html
@@ -9,7 +9,7 @@
         <input type="password" id="password" name="password" placeholder="******">
         <button type="submit" class="btn btn-signin">Sign In</button>
       </form>
-      <p>Don't have an account? <a href="#">Sign Up Now</a></p>
+      <p>Don't have an account? <a (click)="routeSignup()">Sign Up Now</a></p>
     </div>
    
   </div>
