--- a/view/src/app/components/signup/signup.component.html
+++ b/view/src/app/components/signup/signup.component.html
@@ -24,7 +24,7 @@
         
         <button type="submit" class="btn btn-signup">Sign Up</button>
       </form>
-      <p>Already have an account? <a href="#">Login Here</a></p>
+      <p>Already have an account? <a (click)="routeLogin()">Login Here</a></p>
     </div>
   </div>
 </div>
