--- a/view/src/app/components/navbar/navbar.component.html
+++ b/view/src/app/components/navbar/navbar.component.html
@@ -1,25 +1,22 @@
-<nav class="navbar">
-  <!-- Left Section -->
-  <div class="navbar-left">
-    <button mat-button class="nav-btn" (click)="navigateTo('call-machine')">Call Machine</button>
-    <button mat-button class="nav-btn" (click)="navigateTo('user-list')">User List</button>
-    <button mat-button class="nav-btn" (click)="navigateTo('machine-list')">Machine List</button>
-    <button mat-button class="nav-btn" (click)="navigateTo('machine-list')">home</button>
+<div class="navbar">
+  <h2>
+      Code Fusion Hub
+  </h2>
+</div>
 
+<div>
+  <div class="toggle-button-row" (click)="toggleSlideOut()">
+    <mat-icon>menu</mat-icon>
   </div>
+</div>
 
-  <!-- Right Section -->
-  <div class="navbar-right">
-    <!-- If user is logged in -->
-    <div *ngIf="isLoggedIn" class="user-info">
-      <img [src]="user.photo" alt="Profile" class="user-photo" />
-      <span class="user-name">{{ user.name }}</span>
-    </div>
 
-    <!-- If user is not logged in -->
-    <div *ngIf="!isLoggedIn">
-      <button mat-button class="nav-btn" (click)="navigateTo('signin')">Sign In</button>
-      <button mat-button class="nav-btn" (click)="navigateTo('signup')">Sign Up</button>
-    </div>
+<div class="slide-out-panel" [class.slide-out]="isSlideOut">
+  <div class="slide-out-content">
+    <h3 class="nav">Budget Planner</h3>
+    <p class="edit-col" (click)="onDash()">Dashboard</p>
+    <p class="edit-col" (click)="onProfile()">Profile</p>
+    <p class="edit-col" (click)="onHistory()">Prev History</p>
+    <p class="edit-col" (click)="onLogout()">Log Out</p>
   </div>
-</nav>
+</div>
