--- a/view/src/app/components/navbar/navbar.component.scss
+++ b/view/src/app/components/navbar/navbar.component.scss
@@ -1,42 +1,72 @@
 .navbar {
+  background: linear-gradient(135deg, #008080, #80ced6);
+  padding: 5px 10px;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  padding: 10px 20px;
-  background-color: green;
-  color: white;
+  border-radius: 20px;
+  color: #ffffff;
 }
 
-.navbar-left,
-.navbar-right {
-  display: flex;
-  align-items: center;
+.toggle-button-row {
+position: fixed;
+top: 20px;
+left: 20px;
+display: flex;
+align-items: center;
+justify-content: center;
+width: 40px;
+height: 40px;
+background: #fff;
+border-radius: 50%;
+cursor: pointer;
+z-index: 1001;
+box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-.nav-btn {
-  margin: 0 10px;
-  color: white;
-  background-color: transparent;
-  border: none;
-  cursor: pointer;
+.toggle-button-row mat-icon {
+font-size: 24px;
+color: #008080;
 }
 
-.nav-btn:hover {
-  color: #ddd;
+.slide-out-panel {
+position: fixed;
+top: 0;
+left: 0;
+bottom: 0;
+width: 250px;
+background: linear-gradient(135deg, #008080, #80ced6);
+transition: transform 0.3s ease-out;
+z-index: 1000;
+border-top-right-radius: 20px;
+border-bottom-right-radius: 20px;
+box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
 }
 
-.user-info {
-  display: flex;
-  align-items: center;
+.slide-out-panel.slide-out {
+transform: translateX(-100%);
 }
 
-.user-photo {
-  width: 40px;
-  height: 40px;
-  border-radius: 50%;
-  margin-right: 10px;
+.slide-out-content {
+margin-top: 80px;
+padding: 20px;
+}
+.edit-col {
+color: #000;
+cursor: pointer;
+font-size: 18px;
+padding: 10px;
+border-radius: 10px;
+background-color: #ffffff;
+margin-bottom: 10px;
 }
 
-.user-name {
-  font-weight: bold;
+.edit-col:hover {
+color: #008080;
+}
+
+.nav {
+text-align: center;
+justify-content: center;
+background-color: #87dcdc;
 }
