--- a/view/src/app/components/signup/signup.component.html
+++ b/view/src/app/components/signup/signup.component.html
@@ -3,24 +3,25 @@
     <div class="signup-left">
       <h2>Sign Up! 🎉</h2>
       <p>Join us and start your journey!</p>
-      <form>
+      <form (submit)="onSubmit($event)">
+        <p> {{ err }} </p>
         <label for="username">Username</label>
-        <input type="text" id="username" name="username" placeholder="Your username">
+        <input type="text" id="username" #name (keyup)="setName(name.value)" placeholder="Your username">
         
         <label for="email">Email</label>
-        <input type="email" id="email" name="email" placeholder="test@atheros.ai">
+        <input type="email" id="email" #email (keyup)="setEmail(email.value)" placeholder="test@atheros.ai">
         
         <label for="password">Password</label>
-        <input type="password" id="password" name="password" placeholder="******">
+        <input type="password" id="password" #password (keyup)="setPassword(password.value)" placeholder="******">
         
         <label for="confirm-password">Confirm Password</label>
-        <input type="password" id="confirm-password" name="confirm-password" placeholder="******">
+        <input type="password" id="confirm-password" #confirm_password (keyup)="setConfirmPassword(confirm_password.value)" placeholder="******">
         
         <label for="gender">Gender</label>
-        <select id="gender" name="gender">
-          <option value="male">Male</option>
-          <option value="female">Female</option>
-        </select>
+        <select id="gender">
+          <option value="m">Male</option>
+          <option value="f">Female</option>
+        </select>        
         
         <button type="submit" class="btn btn-signup">Sign Up</button>
       </form>
