--- a/view/src/app/components/signup/signup.component.html
+++ b/view/src/app/components/signup/signup.component.html
@@ -4,7 +4,9 @@
       <h2>Sign Up! 🎉</h2>
       <p>Join us and start your journey!</p>
       <form (submit)="onSubmit($event)">
-        <p> {{ err }} </p>
+        <p *ngIf="err" class="alert alert-danger text-center rounded p-3 mb-3">
+          <i class="bi bi-exclamation-circle"></i> {{ err }}
+        </p>
         <label for="username">Username</label>
         <input type="text" id="username" #name (keyup)="setName(name.value)" placeholder="Your username">
         
