--- a/view/src/app/components/navbar/navbar.component.html
+++ b/view/src/app/components/navbar/navbar.component.html
@@ -9,15 +9,16 @@
 
   </div>
 
-  @if (login) {
+  @if (user) {
     <div class="profile-photo">
-      <img src="images/defProfile.jpg" alt="Profile Photo" />
-    </div>    }
+      <img [src]="user.urlphoto" (click)="onProfile()" alt="Profile Photo" />
+    </div>
+  }
   @else {
 
     <div class="if-not-login">
-      <button mat-button class="nav-btn" (click)="1">Sign In</button>
-      <button mat-button class="nav-btn" (click)="1">Sign Up</button>
+      <button mat-button class="nav-btn" (click)="onLogin()">Sign In</button>
+      <button mat-button class="nav-btn" (click)="onSignup()">Sign Up</button>
     </div>
       }
 
