--- a/view/src/app/components/userProfile/userProfile.component.html
+++ b/view/src/app/components/userProfile/userProfile.component.html
@@ -3,7 +3,7 @@
 
   <!-- Profile Picture Section -->
   <div class="profile-picture">
-    <img [src]="user.profilePicture" alt="Profile Picture" />
+    <img [src]="user.urlphoto" alt="Profile Picture" />
   </div>
 
   <!-- View Mode -->
