--- a/view/src/app/components/navbar/navbar.component.html
+++ b/view/src/app/components/navbar/navbar.component.html
@@ -17,8 +17,8 @@
   @else {
 
     <div class="if-not-login">
-      <button mat-button class="nav-btn" (click)="onLogin()">Sign In</button>
-      <button mat-button class="nav-btn" (click)="onSignup()">Sign Up</button>
+      <button mat-button class="nav-btn" (click)="onLogin()"style ="color:black">Sign In</button>
+      <button mat-button class="nav-btn" (click)="onSignup()"style ="color:black">Sign Up</button>
     </div>
       }
 
