--- a/view/src/app/components/navbar/navbar.component.scss
+++ b/view/src/app/components/navbar/navbar.component.scss
@@ -10,10 +10,8 @@
   flex: 1;
   flex-wrap: nowrap;
 }
-//////////////////////////////////
 .toggle-button-row {
   position: fixed;
-  /* top: 20px; */ /* Uncomment if you want to set the vertical position */
   left: 20px;
   display: flex;
   align-items: center;
@@ -34,10 +32,6 @@
   border: 2px solid #fff;
 }
 
-// .toggle-button-row mat-icon {
-//   font-size: 24px;
-//   color: #008080;
-// }
 
 .slide-out-panel {
   position: fixed;
@@ -132,7 +126,7 @@ margin-bottom: 30px;
   font-size: 14px;
   padding: 8px 16px;
   color: #ffffff;
-  background-color: #007bff;
+  background-color: #7cba86;
   border: none;
   border-radius: 4px;
   cursor: pointer;
@@ -140,7 +134,7 @@ margin-bottom: 30px;
 }
 
 .if-not-login .nav-btn:hover {
-  background-color: #0056b3;
+  background-color:#57a885;
 }
 
 .if-not-login .nav-btn:active {
