--- a/view/src/app/components/signup/signup.component.scss
+++ b/view/src/app/components/signup/signup.component.scss
@@ -49,7 +49,7 @@
   }
   
   .signup-left .btn-signup {
-    background-color: #4a90e2;
+    background-color: #57a885;
     color: white;
     padding: 0.5rem;          
     margin-top: 0.8rem;
@@ -61,7 +61,7 @@
   }
   
   .signup-left .btn-signup:hover {
-    background-color: #357ABD;
+    background-color:#2e5a47;
   }
   
   
