--- a/view/src/index.html
+++ b/view/src/index.html
@@ -9,14 +9,16 @@
   <style>
   body{
     background-image: url('/images/wallpaper_enhanced.jpg');
-    background-size: cover;        /* Ensures the image covers the entire viewport */
-    background-position: center;   /* Centers the image */
-    background-repeat: no-repeat;  /* Prevents tiling */
-    background-attachment: fixed;  /* Makes the background stay fixed when scrolling */
-    height: 100vh;                 /* Ensures the body takes up the full height of the viewport */
-    margin: 0;                     /* Removes any default margins */
+    background-size: cover;        
+    background-position: center;   
+    background-repeat: no-repeat;  
+    background-attachment: fixed;  
+    height: 100vh;                 
+    margin: 0;                     
   }
   </style>
+  <link
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
 </head>
 <body>
   <app-root></app-root>
