--- a/view/src/app/components/userProfile/userProfile.component.html
+++ b/view/src/app/components/userProfile/userProfile.component.html
@@ -3,14 +3,14 @@
 
   <!-- Profile Picture Section -->
   <div class="profile-picture">
-    <img [src]="user.urlphoto" alt="Profile Picture" />
+    <img [src]="user?.urlphoto" alt="Profile Picture" />
   </div>
 
   <!-- View Mode -->
   <div *ngIf="!editMode">
-    <p><strong>Name:</strong> {{ user.name }}</p>
-    <p><strong>Email:</strong> {{ user.email }}</p>
-    <p><strong>Gender:</strong> {{ (user.gender === "m"? "male": "female") }}</p>
+    <p><strong>Name:</strong> {{ user?.name }}</p>
+    <p><strong>Email:</strong> {{ user?.email }}</p>
+    <p><strong>Gender:</strong> {{ (user?.gender === "m"? "male": "female") }}</p>
     <div class="button-container">
       <button class="edit-btn" (click)="toggleEditMode()">Edit Profile</button>
       <button class="history-btn" (click)="viewHistory()">History</button>
