--- a/view/src/app/components/login/login.component.html
+++ b/view/src/app/components/login/login.component.html
@@ -2,7 +2,10 @@
     <div class="login-left">
       <h2>Login! 👋</h2>
       <p>How do I get started?</p>
-      <form>
+      <form  (submit)="onSubmit($event)">
+        <p *ngIf="err" class="alert alert-danger text-center rounded p-3 mb-3">
+          <i class="bi bi-exclamation-circle"></i> {{ err }}
+        </p>
         <label for="email">Email</label>
         <input type="email" id="email" name="email" placeholder="test@atheros.ai">
         <label for="password">Password</label>
