--- a/view/src/app/components/userlist/userlist.component.html
+++ b/view/src/app/components/userlist/userlist.component.html
@@ -6,9 +6,17 @@
       <p>Role: {{ user.role }}</p>
     </div>
     <div class="user-actions">
-      <button (click)="editUser(user.id)">Edit</button>
+      <button (click)="toggleEdit(user.id)">Edit</button>
       <button (click)="deleteUser(user.id)">Delete</button>
       <button (click)="viewDetails(user.id)">Details</button>
+    </div>
+    <!-- User and Admin Options -->
+    <div
+      class="edit-options"
+      *ngIf="user.showEditOptions"
+    >
+      <button (click)="assignRole(user.id, 'User')">User</button>
+      <button (click)="assignRole(user.id, 'Admin')">Admin</button>
     </div>
   </div>
 </div>
