--- a/view/src/app/components/userProfile/userProfile.component.html
+++ b/view/src/app/components/userProfile/userProfile.component.html
@@ -18,7 +18,7 @@
   </div>
 
   <!-- Edit Mode -->
-  <div *ngIf="editMode">
+  <form *ngIf="editMode" (submit)="saveProfile($event)">
     <p *ngIf="err" class="alert alert-danger text-center rounded p-3 mb-3">
       <i class="bi bi-exclamation-circle"></i> {{ err }}
     </p>
@@ -28,14 +28,14 @@
     </label>
     <label>
       Email:
-      <input id="email" value="{{ user.email }}" />
+      <input type="email" id="email" value="{{ user.email }}" />
     </label>
     
     <label>
       Upload Profile Picture:
       <input type="file" (change)="onFileSelected($event)" />
     </label>
-    <button class="save-btn" (click)="saveProfile()">Save</button>
+    <button type="submit" class="save-btn">Save</button>
     <button class="cancel-btn" (click)="toggleEditMode()">Cancel</button>
-  </div>
+  </form>
 </div>
