--- a/view/src/app/components/userProfile/userProfile.component.scss
+++ b/view/src/app/components/userProfile/userProfile.component.scss
@@ -36,7 +36,7 @@ input, textarea {
   padding: 10px 20px;
   margin-top: 20px;
   border: none;
-  background-color: #007bff; /* Blue color */
+  background-color: #57a885; /* Blue color */
   color: white;
   border-radius: 4px;
   font-size: 16px;
@@ -44,7 +44,7 @@ input, textarea {
 }
 
 .edit-btn:hover {
-  background-color: #0056b3; /* Darker blue on hover */
+  background-color:#668577 /* Darker blue on hover */
 }
 
 /* Save Button */
