--- a/view/src/app/components/map/map.component.html
+++ b/view/src/app/components/map/map.component.html
@@ -1,1 +1,12 @@
-<div id="map" style="height: 600px; width: 100%;"></div>
+<google-map
+  [center]="center"
+  [zoom]="zoom"
+  [options]="options"
+  (mapClick)="onMapClick($event)"
+  style="height: 100%; width: 100%;">
+  <map-marker *ngIf="selectedPlace" [position]="selectedPlace"></map-marker>
+</google-map>
+
+<p *ngIf="selectedPlace">
+  Selected Coordinates: <strong>{{ selectedPlace.lat }}, {{ selectedPlace.lng }}</strong>
+</p>
