--- a/view/src/app/components/machinelist/machinelist.component.html
+++ b/view/src/app/components/machinelist/machinelist.component.html
@@ -9,14 +9,14 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let machine of machines; let i = index">
+        <tr *ngFor="let machine of machines;">
           <td>{{ machine.name }}</td>
-          <td>{{ machine.location }}</td>
+          <td>{{ machine.latitude }}, {{ machine.longitude }}</td>
           <td>
-            <button (click)="editMachine(i)" class="icon-btn edit-btn">
+            <button (click)="editMachine(machine.id)" class="icon-btn edit-btn">
               <i class="fas fa-pen"></i>
             </button>
-            <button (click)="deleteMachine(i)" class="icon-btn delete-btn">
+            <button (click)="deleteMachine(machine.id)" class="icon-btn delete-btn">
               <i class="fas fa-trash"></i>
             </button>
           </td>
