--- a/view/src/app/components/editmachine/editmachine.component.html
+++ b/view/src/app/components/editmachine/editmachine.component.html
@@ -12,6 +12,18 @@
       />
     </div>
 
+
+    <div class="form-group">
+      <label for="status">Machine Status</label>
+      <select id="status" formControlName="status" required>
+        <option value="on">On</option>
+        <option value="off">Off</option>
+        <option value="maintenance">Maintenance</option>
+      </select>
+    </div>
+
+
+
     <div class="form-group">
       <label for="map">Map</label>
       <!-- ////////////////////////////////////////////////////// -->
