--- a/view/src/app/components/home/home.component.html
+++ b/view/src/app/components/home/home.component.html
@@ -1,1 +1,12 @@
-<app-map></app-map>
+<div class="map-container">
+  <google-map
+    [center]="center"
+    [zoom]="zoom"
+    [options]="options"
+    (mapClick)="onMapClick($event)">
+    <map-marker *ngIf="selectedPlace" [position]="selectedPlace"></map-marker>
+  </google-map>
+  <p *ngIf="selectedPlace">
+    Selected Coordinates: <strong>{{ selectedPlace.lat }}, {{ selectedPlace.lng }}</strong>
+  </p>
+</div>
