--- a/view/src/app/components/detailsmachine/detailsmachine.component.scss
+++ b/view/src/app/components/detailsmachine/detailsmachine.component.scss
@@ -1,7 +1,7 @@
 /* General layout settings */
 .machine-details {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #f4f7fb;
+  background-color: #19875496;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   max-width: 600px;
