--- a/view/src/app/components/detailsmachine/detailsmachine.component.html
+++ b/view/src/app/components/detailsmachine/detailsmachine.component.html
@@ -3,5 +3,6 @@
   <div class="details">
     <p><strong>Machine Name:</strong> {{ machine.name }}</p>
     <p><strong>Location:</strong> {{ machine.location }}</p>
+    <p><strong>state:</strong> {{ machine.location }}</p>
   </div>
 </div>
