--- a/view/src/app/components/machinelist/machinelist.component.html
+++ b/view/src/app/components/machinelist/machinelist.component.html
@@ -1,28 +1,39 @@
 <div class="machine-list-container">
-    <h1>Machine List</h1>
-    <table>
+  <h1>Machine List</h1>
+
+  <!-- Search Section -->
+  <div class="search-container">
+      <input
+        type="text"
+        placeholder="Search by name..."
+        [(ngModel)]="searchQuery"
+        (input)="onSearch()"
+        class="search-input"
+      />
+  </div>
+
+  <table>
       <thead>
-        <tr>
-          <th>Name</th>
-          <th>Location</th>
-          <th>Actions</th>
-        </tr>
+          <tr>
+              <th>Name</th>
+              <th>Location</th>
+              <th>Actions</th>
+          </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let machine of machines;">
-          <td (click)="onDetails(machine.id)">{{ machine.name }}</td>
-          <td>{{ machine.latitude }}, {{ machine.longitude }}</td>
-          <td>
-            <button (click)="editMachine(machine.id)" class="icon-btn edit-btn">
-              <i class="fas fa-pen"></i>
-            </button>
-            <button (click)="deleteMachine(machine.id)" class="icon-btn delete-btn">
-              <i class="fas fa-trash"></i>
-            </button>
-          </td>
-        </tr>
+          <tr *ngFor="let machine of filteredMachines">
+              <td (click)="onDetails(machine.id)">{{ machine.name }}</td>
+              <td>{{ machine.latitude }}, {{ machine.longitude }}</td>
+              <td>
+                  <button (click)="editMachine(machine.id)" class="icon-btn edit-btn">
+                      <i class="fas fa-pen"></i>
+                  </button>
+                  <button (click)="deleteMachine(machine.id)" class="icon-btn delete-btn">
+                      <i class="fas fa-trash"></i>
+                  </button>
+              </td>
+          </tr>
       </tbody>
-    </table>
-    <button class="add-machine-btn" (click)="addMachine()">Add Machine</button>
-  </div>
-  
+  </table>
+  <button class="add-machine-btn" (click)="addMachine()">Add Machine</button>
+</div>
