--- a/view/src/app/components/machinelist/machinelist.component.scss
+++ b/view/src/app/components/machinelist/machinelist.component.scss
@@ -81,3 +81,11 @@
     background-color: #668577;
   }
   
+  .search-container {
+    margin-bottom: 20px;
+}
+.search-input {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;}
