--- a/view/src/app/components/home/home.component.html
+++ b/view/src/app/components/home/home.component.html
@@ -1,4 +1,11 @@
-<div id="map" style="height: 600px;"></div>
+<div id="map" style="height: 550px;"></div>
 
 
 <button (click)="Move()">Move</button>
+
+<div class="button-container">
+  <button class="call-machine-button">
+      <span class="icon">📞</span>
+      Call Machine
+  </button>
+</div>
