--- a/view/src/app/components/userlist/userlist.component.scss
+++ b/view/src/app/components/userlist/userlist.component.scss
@@ -68,12 +68,12 @@
   color: #fff;
 }
 
-.user-actions button:nth-child(2) {
-  background-color: #f44336;
-  color: #fff;
-}
+// .user-actions button:nth-child(2) {
+//   background-color: #f44336;
+//   color: #fff;
+// }
 
-.user-actions button:nth-child(3) {
+.user-actions button:nth-child(2) {
   background-color: #2196f3;
   color: #fff;
 }
