--- a/view/src/app/components/home/home.component.html
+++ b/view/src/app/components/home/home.component.html
@@ -1,7 +1,7 @@
 <div id="map" style="height: 550px;"></div>
 
 
-<button (click)="Move()">Move</button>
+<!-- <button (click)="Move()">Move</button> -->
 
 <div class="button-container">
   <button class="call-machine-button">
