--- a/view/src/app/components/userdetials/userdetials.component.html
+++ b/view/src/app/components/userdetials/userdetials.component.html
@@ -2,7 +2,7 @@
     <h1>User Details</h1>
     <div class="profile-section">
       <div class="profile-picture">
-        <img [src]="user?.urlphoto || 'https://via.placeholder.com/130'" alt="Profile Picture" />
+        <img [src]="user?.urlphoto || 'images/defProfile.jpg'" alt="Profile Picture" />
       </div>
       <div class="user-info">
         <p><strong>Name:</strong> {{ user?.name }}</p>
@@ -13,7 +13,7 @@
           {{ user?.gender === 'm' ? 'Male' : user?.gender === 'f' ? 'Female' : 'Not Specified' }}
         </p>
   
-        <p><strong>Role:</strong> {{ user?.role }}</p> <!-- إظهار الدور -->
+        <p><strong>Role:</strong> {{ user?.role }}</p>
       </div>
     </div>
   </div>
