--- a/view/src/app/components/home/home.component.html
+++ b/view/src/app/components/home/home.component.html
@@ -4,7 +4,7 @@
 <!-- <button (click)="Move()">Move</button> -->
 
 <div class="button-container">
-  <button class="call-machine-button">
+  <button (click)="call()" class="call-machine-button">
       <span class="icon">📞</span>
       Call Machine
   </button>
