--- a/view/src/app/components/home/home.component.html
+++ b/view/src/app/components/home/home.component.html
@@ -3,6 +3,9 @@
 <br/>
 <!-- <button (click)="Move()">Move</button> -->
 
+<p *ngIf="err" class="alert alert-danger text-center rounded p-3 mb-3">
+  <i class="bi bi-exclamation-circle"></i> {{ err }}
+</p>
 <div class="button-container">
   <button (click)="call()" class="call-machine-button">
       <span class="icon">📞</span>
