--- a/view/src/app/components/history/history.component.html
+++ b/view/src/app/components/history/history.component.html
@@ -1,22 +1,32 @@
 <div class="container">
-    <h1>{{ title }}</h1>
-    <table class="order-table">
-      <thead>
-        <tr>
-          <th>Order ID</th>
-          <th>Machine Name</th>
-          <th>Order Date</th>
-          <th>Status</th>
-        </tr>
-      </thead>
-      <tbody>
-        <tr *ngFor="let order of orders">
+  <h1>{{ title }}</h1>
+  <table class="order-table">
+    <thead>
+      <tr>
+        <th>Order ID</th>
+        <th>Machine Name</th>
+        <th>Status</th>
+      </tr>
+    </thead>
+    <tbody>
+      <!-- Iterate over orders -->
+      <ng-container *ngFor="let order of orders">
+        <tr (click)="toggleDetails(order.id)" [class.selected-row]="expandedOrderId === order.id">
           <td>{{ order.id }}</td>
           <td>{{ order.machineName }}</td>
-          <td>{{ order.orderDate | date: 'longDate' }}</td>
           <td>{{ order.status }}</td>
         </tr>
-      </tbody>
-    </table>
-  </div>
-  
+        <tr *ngIf="expandedOrderId === order.id" class="details-row">
+          <td colspan="3" class="details">
+            <p><strong>Materials in the Machine:</strong></p>
+            <ul>
+              <li *ngFor="let material of order.materials">
+                {{ material.name }} - Quantity: {{ material.quantity }}
+              </li>
+            </ul>
+          </td>
+        </tr>
+      </ng-container>
+    </tbody>
+  </table>
+</div>
