--- a/view/src/app/components/navbar/navbar.component.html
+++ b/view/src/app/components/navbar/navbar.component.html
@@ -33,7 +33,7 @@
     <h3 class="nav">waste sorting</h3>
     <p class="edit-col" (click)="onHome()">Home</p>
     @if(user) { <p class="edit-col" (click)="onHistory()">Prev History</p> }
-    @if(user && user.role === "Admin") { <p class="edit-col" (click)="onCallMachine()">Call Machine</p>
+    @if(user && user.role === "Admin") { 
     <p class="edit-col" (click)="onMachinesList()">Machines List</p>
     <p class="edit-col" (click)="onUsersList()">Users List</p> }
     @if(user) { <p class="edit-col" (click)="onLogout()">Log Out</p> }
