--- a/view/src/app/components/notification/notification.component.html
+++ b/view/src/app/components/notification/notification.component.html
@@ -11,7 +11,7 @@
       <h2>{{ notification.title }}</h2>
       <p>{{ notification.description }}</p>
       <span>{{ notification.timestamp | date: 'short' }}</span>
-      <span *ngIf="!notification.timestamp">Invalid date</span>
+      <!-- <span *ngIf="!notification.timestamp">Invalid date</span> -->
     </li>
   </ul>
 </div>
