--- a/view/src/app/components/detailsmachine/detailsmachine.component.html
+++ b/view/src/app/components/detailsmachine/detailsmachine.component.html
@@ -5,6 +5,8 @@
     <p><strong>Location:</strong> {{ machine.latitude }}, {{ machine.longitude }}</p>
     <p><strong>state:</strong> {{ machine.state }}</p>
   </div>
+  <br>
+  <button class="btn btn-primary btn-lg btn-block" *ngIf="machine?.name" (click)="report()">Get report</button>
   <div class="details" *ngIf="!machine?.name">
     <p class="alert alert-danger text-center rounded p-3 mb-3">
       <i class="bi bi-exclamation-circle"></i> 404 NOT SUCH MACHINE
