--- a/view/src/app/components/navbar/navbar.component.scss
+++ b/view/src/app/components/navbar/navbar.component.scss
@@ -11,7 +11,7 @@
   flex-wrap: nowrap;
 }
 .toggle-button-row {
-  position: fixed;
+  position: absolute;
   left: 20px;
   display: flex;
   align-items: center;
